# PR-RootCAD

./: .gitignore  .pre-commit-config.yaml  0002-add-aniso-distance.patch  ACTIONS_TASKS.md  AGENTS.md  APOLLONIAN_WORKFLOW_GUIDE.md  AdaptiveCAD.code-workspace  CONTRIBUTING.md  COPILOT_README.md  MANDELBULB_README.md  MANUAL_SETUP_STEPS.ps1  Makefile  PHASE_RESOLVED_MODELING.md  PLAYGROUND_GUIDE.md  Plan.md  README.md  README_ANISO_DISTANCE.md  adaptivecad_apollonian_fields.py  adaptivecad_entangled_fields.py  adaptivecad_fields_optimizer.py  adaptivecad_shapes_builder.py  ama2gcode.py  ama_to_gcode_converter.py  ama_viewer.py  analytic_viewport_launcher.py  apollonian_gasket.py  apollonian_small_field.py  apollonian_small_points.json  apollonian_sweep.blend  apollonian_test_field.py  blender_apollonian_sweep.py  blender_cli_apollonian.py  bulb_adaptive.stl  bulb_adaptive_color.ply  bulb_angular.stl  bulb_angular_color.ply  bulb_power5_color.ply  bulb_smooth_color.ply  check_environment.py  check_occ.py  (+86 more)
.github/: CODEOWNERS  copilot-instructions.md
AdaptiveCAD_Shipping_Track_v1/: README.md  adaptivecad_fields_optimizer.py  adaptivecad_redshift_infuser.py  adaptivecad_runner.py
adaptive-resistance-site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
adaptive_pi/: adaptivecad_render.py  aniso_fmm.py
adaptivecad/: __init__.py  analytic_slicer.py  command_defs.py  cosmic_curve_tools.py  display_utils.py  fix_superellipse_error.py  gcode_generator.py  linalg.py  nd_math.py  ndbox.py  ndfield.py  params.py  patch_superellipse.py  primitives.py  (+14 more)
(+254 files in other folders)
